Navbar spacing fixes

--- a/App/src/components/NavBar.scss
+++ b/App/src/components/NavBar.scss
@@ -3,8 +3,6 @@
     flex-direction: column;
     justify-content: space-between;
 
-    box-shadow: 5px 5px 20px var(--sec1);
-
     color: var(--main);
     background-color: var(--sec);
 
@@ -23,8 +21,7 @@
     .links,
     & footer {
         display: grid;
-        gap: 0.5rem;
-        padding: 0.25rem;
+        gap: 0.25rem;
 
         & a {
             display: flex;
